force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Franchise_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Franchise_Fees__c</fullName>
    <label>Total Franchise Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>