force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Guaranteed_Pmts__c.field-meta.xml
<CustomField>
    <fullName>Total_Guaranteed_Pmts__c</fullName>
    <label>Total Guaranteed Pmts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>