force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Number_of_Units_Slips_Pads__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Units_Slips_Pads__c</fullName>
    <label>Total Number of Units Slips Pads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>