force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Occupancy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Total_Occupancy_Percentage__c</fullName>
    <label>Total Occupancy Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>