force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserves__c</fullName>
    <label>Total Reserves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>