force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Rooms_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms_Sold__c</fullName>
    <label>Total Rooms Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>