force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Total_Vacancy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Vacancy_Amount__c</fullName>
    <label>Total Vacancy Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>