force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Travel_and_Meals__c.field-meta.xml
<CustomField>
    <fullName>Travel_and_Meals__c</fullName>
    <label>Travel and Meals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>