force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Unit_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Measure__c</fullName>
    <label>Unit Measure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>