force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>The type of unit being entered on a spreads schedule</description>
    <inlineHelpText>Please enter the unit type (for example, bushels, acres, CWT, head, etc.)</inlineHelpText>
    <label>Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>