force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Unrecaptured_Section_1250_Gain__c.field-meta.xml
<CustomField>
    <fullName>Unrecaptured_Section_1250_Gain__c</fullName>
    <label>Unrecaptured Section 1250 Gain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>