force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Utilities__c.field-meta.xml
<CustomField>
    <fullName>Utilities__c</fullName>
    <label>Utilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>