force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Vacancy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Amount__c</fullName>
    <label>Vacancy Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>