force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Vacancy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Percentage__c</fullName>
    <label>Vacancy Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>