force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Value_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Value_Per_Unit__c</fullName>
    <label>Value Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>