force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Vcncy_Percent_Amt__c.field-meta.xml
<CustomField>
    <fullName>Vcncy_Percent_Amt__c</fullName>
    <label>Vcncy Percent Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>