force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>