force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Wages__c.field-meta.xml
<CustomField>
    <fullName>Wages__c</fullName>
    <label>Wages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>