force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/X28_Rate_Gain__c.field-meta.xml
<CustomField>
    <fullName>X28_Rate_Gain__c</fullName>
    <label>28% Rate Gain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>