force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Year_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>Year_Manufactured__c</fullName>
    <label>Year Manufactured</label>
    <length>4</length>
    <type>Text</type>
</CustomField>