force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Year_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Year_Purchased__c</fullName>
    <label>Year Purchased</label>
    <length>4</length>
    <type>Text</type>
</CustomField>