force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <label>Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>