force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Yield_Per_Acre__c.field-meta.xml
<CustomField>
    <fullName>Yield_Per_Acre__c</fullName>
    <description>For the user to enter the yield (bushels, pounds, etc.) per acre in an Ag schedule</description>
    <inlineHelpText>Please enter the yield (number of bushels, lbs, CWT, etc.) per acre.</inlineHelpText>
    <label>Yield Per Acre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>